--- a/src/app/components/pages/products/show-product/show-product.component.html
+++ b/src/app/components/pages/products/show-product/show-product.component.html
@@ -426,6 +426,7 @@
                       >Không tìm thấy kết quả phù hợp</strong
                     >
                   </div>
+                  <div [innerHTML]="currentPageReport" class="current-page-report"></div>
                 <div class="paginator">
                     <p-paginator
                         [rows]="this.pageSize"
