--- a/src/app/components/pages/products/show-product/show-product.component.html
+++ b/src/app/components/pages/products/show-product/show-product.component.html
@@ -122,9 +122,9 @@
                             <th style="width: 10%; text-align: right">
                                 Giá bán
                             </th>
-                            <!-- <th style="width: 7%; text-align: right">
+                            <th style="width: 7%; text-align: right">
                                 Tồn kho
-                            </th> -->
+                            </th>
                             <th style="width: 10%; text-align: center">
                                 Trạng thái
                             </th>
@@ -226,7 +226,7 @@
                                     }}
                                 </p>
                             </td>
-                            <!-- <td class="quantity-product">
+                            <td class="quantity-product">
                                 <p
                                     style="margin: 15px 0; height: 23px"
                                     *ngFor="
@@ -255,7 +255,7 @@
                                             : product.totalQuantity
                                     }}
                                 </p>
-                            </td> -->
+                            </td>
                             <td
                                 class="n-product-status"
                                 style="
@@ -426,16 +426,23 @@
                       >Không tìm thấy kết quả phù hợp</strong
                     >
                   </div>
-                  <div [innerHTML]="currentPageReport" class="current-page-report"></div>
+                  <p>
+                    <span style="font-weight: 500">{{ startRecord }}</span> -
+                    <span style="font-weight: 500">{{ endRecord }}</span> trong
+                    <span style="font-weight: 500">{{
+                        totalRecords
+                    }}</span>
+                    bản ghi
+                </p>
                 <div class="paginator">
                     <p-paginator
-                        [rows]="this.pageSize"
-                        [totalRecords]="
-                            this.totalRecords > 0 ? this.totalRecords : 1
-                        "
-                        [rowsPerPageOptions]="[30, 20, 10]"
-                        (onPageChange)="onPageChange($event)"
-                    ></p-paginator>
+                    [rows]="pageSize"
+                    (onPageChange)="onPageChange($event)"
+                    [totalRecords]="
+                        totalRecords > 0 ? totalRecords : 1
+                    "
+                    [rowsPerPageOptions]="[10, 20, 30]"
+                ></p-paginator>
                 </div>
             </div>
         </div>
