--- a/src/app/components/pages/products/create-product/create-product.component.html
+++ b/src/app/components/pages/products/create-product/create-product.component.html
@@ -269,7 +269,7 @@
                                     </div>            
                                 </div>
                             </div>                     
-                            <div class="col-lg-12"  *ngIf="productForm.get('productType').value === 0">
+                            <!-- <div class="col-lg-12"  *ngIf="productForm.get('productType').value === 0">
                                 <div class="row">
                                     <div class="col-lg-4">
                                         <label class="labelip">Kho hàng</label>
@@ -285,7 +285,7 @@
                                             /> 
                                     </div>      
                                 </div>
-                            </div>
+                            </div> -->
                             <div class="col-lg-12">
                               <label style="color: rgb(139, 127, 248); cursor: pointer;" class="labelip" (click)="toggleDescriptionEditor()">
                                 {{ showDescriptionEditor ? 'Ẩn mô tả sản phẩm' : 'Hiển thị mô tả sản phẩm' }}
@@ -513,7 +513,7 @@
                                             <th style="width: 20%">SKU phân loại</th>
                                             <th style="width: 10%">Mã vạch/Mã Barcode</th>
                                             <th style="width: 10%">Giá bán</th>
-                                            <th  *ngIf="productForm.get('productType').value === 0">Tồn kho</th>
+                                            <!-- <th  *ngIf="productForm.get('productType').value === 0">Tồn kho</th> -->
                                           </tr>
                                         </ng-template>
                                         <ng-template
@@ -598,7 +598,7 @@
                                                   (click)="toggleEditMode3(i, j)"
                                               />
                                             </td>
-                                            <td  *ngIf="productForm.get('productType').value === 0">
+                                            <!-- <td  *ngIf="productForm.get('productType').value === 0">
                                               <input
                                                 class="form-control"
                                                 type="text"
@@ -606,7 +606,7 @@
                                                 (keypress)="onKeyPress($event)"
                                                 [style]="{ height: '35px', width: '200px' }"
                                               />
-                                            </td>
+                                            </td> -->
                                           </tr>
                                         </ng-template>
                                       </p-table>
