--- a/src/app/components/pages/products/update-product/update-product.component.html
+++ b/src/app/components/pages/products/update-product/update-product.component.html
@@ -263,7 +263,7 @@
                                     </div>             
                                 </div>
                             </div>                     
-                            <div class="col-lg-12">
+                            <!-- <div class="col-lg-12">
                                 <div class="row">
                                     <div class="col-lg-4"  *ngIf="productForm.get('productType')?.value === 0 && productById.productVariants?.length === 0">
                                         <label class="labelip">Kho hàng</label>
@@ -279,7 +279,7 @@
                                             /> 
                                     </div>      
                                 </div>
-                            </div>
+                            </div> -->
                             <div class="col-lg-12">
                               <label style="color: rgb(139, 127, 248); cursor: pointer;" class="labelip" (click)="toggleDescriptionEditor()">
                                 {{ showDescriptionEditor ? 'Ẩn mô tả sản phẩm' : 'Hiển thị mô tả sản phẩm' }}
@@ -647,7 +647,7 @@
                                             <th style="width: 20%">SKU phân loại</th>
                                             <th style="width: 10%">Mã vạch/Mã Barcode</th>
                                             <th style="width: 10%">Giá bán</th>
-                                            <th *ngIf="productForm.get('productType').value === 0">Tồn kho</th>
+                                            <!-- <th *ngIf="productForm.get('productType').value === 0">Tồn kho</th> -->
                                           </tr>
                                         </ng-template>
                                         <ng-template
@@ -722,7 +722,7 @@
                                                 {{ getPriceControlError(i, j) }}
                                               </div>
                                             </td>
-                                            <td  *ngIf="productForm.get('productType').value === 0">
+                                            <!-- <td  *ngIf="productForm.get('productType').value === 0">
                                               <input
                                                 class="form-control"
                                                 type="text"
@@ -730,7 +730,7 @@
                                                 (keypress)="onKeyPress($event)"
                                                 [style]="{ height: '35px', width: '200px' }"
                                               />
-                                            </td>
+                                            </td> -->
                                           </tr>
                                         </ng-template>
                                       </p-table>
@@ -761,7 +761,7 @@
                                             <th style="width: 20%">SKU phân loại</th>
                                             <th style="width: 10%">Mã vạch/Mã Barcode</th>
                                             <th style="width: 10%">Giá bán</th>
-                                            <th  *ngIf="productForm.get('productType')?.value === 0">Tồn kho</th>
+                                            <!-- <th  *ngIf="productForm.get('productType')?.value === 0">Tồn kho</th> -->
                                           </tr>
                                         </ng-template>
                                         <ng-template pTemplate="body" let-row let-i="rowIndex"
@@ -846,7 +846,7 @@
                                                   (click)="toggleEditMode3(i, j)"
                                               />
                                             </td>
-                                            <td  *ngIf="productForm.get('productType')?.value === 0">
+                                            <!-- <td  *ngIf="productForm.get('productType')?.value === 0">
                                               <input
                                                 class="form-control"
                                                 type="text"
@@ -854,7 +854,7 @@
                                                 (keypress)="onKeyPress($event)"
                                                 [style]="{ height: '35px', width: '200px' }"
                                               />
-                                            </td>
+                                            </td> -->
                                           </tr>
                                         </ng-template>
                                       </p-table>
