--- a/src/app/components/pages/group-list/group-rights/group-rights.component.html
+++ b/src/app/components/pages/group-list/group-rights/group-rights.component.html
@@ -346,7 +346,7 @@
                                 <button
                                     pButton
                                     pRipple
-                                    label="Thêm"
+                                    label="Lưu"
                                     class="p-button-success butttonsave"
                                     type="submit"
                                 ></button>
