--- a/src/app/components/activate-success/activate-success.component.html
+++ b/src/app/components/activate-success/activate-success.component.html
@@ -132,6 +132,6 @@
         <h1 class="name-company">CÔNG TY TNHH TMDV & XNK TIẾN LINH</h1>
         <span>Địa chỉ: Mễ Hạ, Yên Phú, Yên Mỹ, Hưng Yên</span>
         <span>Email: tienlinhgroups&#64;gmail.com</span>
-        <span>SĐT:0961462860</span>
+        <span>SĐT:0973952732 - 0915317043</span>
     </footer>
 </div>
