--- a/src/app/components/pages/inventory-product/show/show.component.html
+++ b/src/app/components/pages/inventory-product/show/show.component.html
@@ -81,7 +81,10 @@
                                 />
                             </div>
                         </div>
-                        <div class="flex flex-column">
+                        <div
+                            *ngIf="userCurrent.branchId == 1"
+                            class="flex flex-column"
+                        >
                             <label
                                 for="email1"
                                 class="block text-900 text-large font-weight mb-2"
@@ -271,7 +274,6 @@
                     </tr>
                 </ng-template>
             </p-table>
-
             <div
                 class="flex align-items-center"
                 style="justify-content: space-between"
