--- a/src/app/components/pages/warehouse/stock-in/show/show.component.html
+++ b/src/app/components/pages/warehouse/stock-in/show/show.component.html
@@ -424,7 +424,10 @@
                                 <div
                                     class="col-12 mb-2 md:col-5 md:mb-0 flex justify-content-start"
                                 >
-                                    Đang trống
+                                    {{
+                                        stockInItemDetail?.supplierName ||
+                                            "Đang trống"
+                                    }}
                                 </div>
                             </div>
                             <div class="field grid">
