--- a/src/app/components/pages/warranty/warranty-lookup/warranty-lookup.component.html
+++ b/src/app/components/pages/warranty/warranty-lookup/warranty-lookup.component.html
@@ -20,8 +20,11 @@
                     <div class="field mb-0">
                         <label
                             style="font-weight: 600; color: #000"
-                            htmlFor="name1">Nhập thông tin<span
-                                class="red-asterisk">*</span></label>
+                            htmlFor="name1"
+                            >Nhập thông tin<span class="red-asterisk"
+                                >*</span
+                            ></label
+                        >
                         <input
                             pInputText
                             id="name1"
@@ -29,11 +32,11 @@
                             formControlName="inputData"
                             spellcheck="false"
                             (input)="removeWhitespace()"
-                            placeholder="Nhập số khung/số máy hoặc số điện thoại" />
+                            placeholder="Nhập số khung/số máy hoặc số điện thoại"
+                        />
                         <!-- <div *ngIf="showErrors" class="error-message" style="color: red;">
                             Vui lòng nhập đủ số máy và số khung để kiểm tra!
                         </div> -->
-
                     </div>
                 </div>
             </div>
@@ -45,7 +48,8 @@
                     severity="secondary"
                     type="submit"
                     label="Kiểm tra"
-                    class="p-button-danger flex-1"></button>
+                    class="p-button-danger flex-1"
+                ></button>
             </div>
             <div class="mt-5">
                 <div *ngIf="customer">
@@ -84,45 +88,82 @@
                                 <tr *ngFor="let product of warrantyData">
                                     <td>
                                         <div>
-                                            <strong>{{ product.product.name }}</strong>
+                                            <strong>{{
+                                                product.product.name
+                                            }}</strong>
                                             <p>
                                                 Số khung:
-                                                {{ product.inventoryStockDetailProductImei.frameNumber}}
+                                                {{
+                                                    product
+                                                        .inventoryStockDetailProductImei
+                                                        .frameNumber
+                                                }}
                                             </p>
                                             <p>
                                                 Số máy:
-                                                {{ product.inventoryStockDetailProductImei.engineNumber }}
+                                                {{
+                                                    product
+                                                        .inventoryStockDetailProductImei
+                                                        .engineNumber
+                                                }}
                                             </p>
                                         </div>
                                     </td>
                                     <td>
                                         <span
                                             *ngIf="
-                                                !product.product.warrantyPolicy?.term
-                                            ">Không bảo hành
+                                                !product.product.warrantyPolicy
+                                                    ?.term
+                                            "
+                                            >Không bảo hành
                                         </span>
-                                        <span>{{  product.product.warrantyPolicy?.term}}
+                                        <span
+                                            >{{
+                                                product.product.warrantyPolicy
+                                                    ?.term
+                                            }}
                                         </span>
                                         <span
                                             *ngIf="
-                                                product.product.warrantyPolicy?.termType === 1
-                                            ">ngày</span>
+                                                product.product.warrantyPolicy
+                                                    ?.termType === 1
+                                            "
+                                            >ngày</span
+                                        >
                                         <span
                                             *ngIf="
-                                                product.product.warrantyPolicy?.termType === 2
-                                            ">tuần</span>
+                                                product.product.warrantyPolicy
+                                                    ?.termType === 2
+                                            "
+                                            >tuần</span
+                                        >
                                         <span
-                                            *ngIf="product.product.warrantyPolicy?.termType === 3
-                                            ">tháng</span>
+                                            *ngIf="
+                                                product.product.warrantyPolicy
+                                                    ?.termType === 3
+                                            "
+                                            >tháng</span
+                                        >
                                         <span
-                                            *ngIf="product.product.warrantyPolicy?.termType === 4
-                                            ">quý</span>
+                                            *ngIf="
+                                                product.product.warrantyPolicy
+                                                    ?.termType === 4
+                                            "
+                                            >quý</span
+                                        >
                                         <span
-                                            *ngIf="product.product.warrantyPolicy?.termType === 5
-                                            ">năm</span>
+                                            *ngIf="
+                                                product.product.warrantyPolicy
+                                                    ?.termType === 5
+                                            "
+                                            >năm</span
+                                        >
                                     </td>
                                     <td>
-                                        {{ product.expirationDate| date : "dd/MM/yyyy"}}
+                                        {{
+                                            product.expirationDate
+                                                | date : "dd/MM/yyyy"
+                                        }}
                                     </td>
                                 </tr>
                             </tbody>
@@ -132,9 +173,12 @@
             </div>
             <div
                 class="mt-5"
-                *ngIf="isChecked && warrantyData && warrantyData.length === 0">
-                <label>Không tìm thấy thông tin bảo hành cho số máy đã
-                    nhập.</label>
+                *ngIf="isChecked && warrantyData && warrantyData.length === 0"
+            >
+                <label
+                    >Không tìm thấy thông tin bảo hành cho số máy đã
+                    nhập.</label
+                >
             </div>
         </div>
         <footer class="footer">
@@ -142,7 +186,7 @@
             <h1 class="name-company">CÔNG TY TNHH TMDV & XNK TIẾN LINH</h1>
             <span>Địa chỉ: Mễ Hạ, Yên Phú, Yên Mỹ, Hưng Yên</span>
             <span>Email: tienlinhgroups&#64;gmail.com</span>
-            <span>SĐT:0961462860</span>
+            <span>SĐT:0973952732 - 0915317043</span>
         </footer>
     </div>
 </form>
