--- a/src/app/components/pages/group-list/group-rights/group-rights.component.html
+++ b/src/app/components/pages/group-list/group-rights/group-rights.component.html
@@ -278,6 +278,8 @@
                                                 [(selectedPermissions)]="
                                                     selectedPermissionIds
                                                 "
+                                                (selectedPermissionsChange)="onPermissionsChange($event)"
+
                                             >
                                             </app-permission-item>
                                         </ng-container>
