--- a/src/app/components/pages/group-list/update-role/permission-item/permission-item.component.html
+++ b/src/app/components/pages/group-list/update-role/permission-item/permission-item.component.html
@@ -44,7 +44,9 @@
 		<app-permission-item 
 		  [permission]="child" 
 		  [permissionsTree]="permissionsTree"
-		  [(selectedPermissions)]="selectedPermissions">
+		  [(selectedPermissions)]="selectedPermissions"
+		  (selectedPermissionsChange)="onChildPermissionsChange($event)">
+		  >
 		</app-permission-item>
 	  </ng-container>
 	</ul>
