--- a/src/app/components/pages/merchandise/branch-receiving/branch-receiving.component.html
+++ b/src/app/components/pages/merchandise/branch-receiving/branch-receiving.component.html
@@ -470,9 +470,10 @@
                                 <!-- Tổng số sản phẩm -->
 
                                 <div class="col-12 mb-2 md:col-6 md:mb-0">
-                                    Chi nhánh gửi:
+                                    Chi nhánh nhận:
                                 </div>
                                 <div
+                                style="padding-left: 65px;"
                                     class="col-12 mb-2 md:col-6 md:mb-0 flex justify-content-end"
                                 >
                                     {{ this.ladingData?.toBranchName }}
