--- a/src/app/components/pages/warehouse/stock-transfer/stock-transfer.component.html
+++ b/src/app/components/pages/warehouse/stock-transfer/stock-transfer.component.html
@@ -99,6 +99,8 @@
                                     [showClear]="true"
                                     placeholder="Chọn thời gian"
                                     inputId="icon"
+                                    (onSelect)="onDateSelect($event)"
+                                    (onClear)="onDateClear()"
                                 ></p-calendar>
                             </div>
                             <button
@@ -127,7 +129,7 @@
                         <td style="font-size: 14px;"  [routerLink]="['/pages/merchandise/branch-receiving', user.id]">
                           {{user.id}}</td>
                         <td style="font-size: 14px;">{{ user.code }}</td>
-                        <td style="font-size: 14px;">{{ this.userCurrent?.name }}</td>
+                        <td style="font-size: 14px;">{{ user.createName }}</td>
                         <td style="font-size: 14px; max-width: 110px; overflow: hidden;">{{ user.fromBranchName }}</td>
                         <td style="font-size: 14px; max-width: 110px; overflow: hidden;">{{ user.toBranchName }}</td>
                         <td style="text-align: center;">
