--- a/src/app/components/pages/products/create-product/create-product.component.html
+++ b/src/app/components/pages/products/create-product/create-product.component.html
@@ -385,7 +385,7 @@
                         </div>                      
                         <div class="card-body-1" *ngIf="addVariants">
                             <div class="col-lg-12 mt-3">
-                                <i style="float: right; color: red; cursor: pointer;" class="pi pi-times" (click)="closeAddVariants()"></i>
+                                <!-- <i style="float: right; color: red; cursor: pointer;" class="pi pi-times" (click)="closeAddVariants()"></i> -->
                                 <div class="col-lg-6 mt-3 mb-2">
                                   <input
                                     type="text"
@@ -459,7 +459,7 @@
                         </div>
                         <div class="card-body-1" *ngIf="addVariants2">
                             <div class="col-lg-12 mt-3">
-                                <i style="float: right; color: red; cursor: pointer;" class="pi pi-times" (click)="closeAddVariants2()"></i>
+                                <!-- <i style="float: right; color: red; cursor: pointer;" class="pi pi-times" (click)="closeAddVariants2()"></i> -->
                                 <div class="col-lg-6 mt-3 mb-2">
                                     <input
                                         type="text"
