--- a/src/app/components/pages/products/show-product/show-product.component.html
+++ b/src/app/components/pages/products/show-product/show-product.component.html
@@ -148,17 +148,30 @@
                                 position: relative;
                             "
                         >
-                            <td class="n-image-product">
-                                <img
-                                    [src]="
-                                        imageUrl +
-                                        '/api/files/images/' +
-                                        (product.productImages[0]
-                                            ? product.productImages[0].link
-                                            : 'no-image.png')
-                                    "
-                                />
-                            </td>
+                        <td class="n-image-product">
+                            <ng-container *ngIf="product.productImages[0] && product.productImages[0].link; else noImage">
+                              <img
+                                [src]="imageUrl + '/api/files/images/' + product.productImages[0].link"
+                              />
+                            </ng-container>
+                            <ng-template #noImage>
+                              <svg 
+                                viewBox="0 0 24 24"
+                                fill="none"
+                                xmlns="http://www.w3.org/2000/svg"
+                                style="color: rgb(232, 234, 235); height: 50px;"
+                              >
+                                <path
+                                  d="M19 3H5c-1.103 0-2 .897-2 2v14c0 1.103.897 2 2 2h14c1.103 0 2-.897 2-2V5c0-1.103-.897-2-2-2ZM5 19V5h14l.002 14H5Z"
+                                  fill="currentColor"
+                                ></path>
+                                <path
+                                  d="m10 14-1-1-3 4h12l-5-7-3 4ZM8.5 11a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3Z"
+                                  fill="currentColor"
+                                ></path>
+                              </svg>
+                            </ng-template>
+                          </td>                          
                             <td>
                                 <span>{{ product.name }}</span>
                                 <p style="color: blue; font-weight: 600">
@@ -347,7 +360,7 @@
                                 >
                                     <p>Cập nhật</p>
                                 </a>
-                                <p
+                                <!-- <p
                                     style="
                                         margin: 5px 0;
                                         text-align: center;
@@ -360,7 +373,7 @@
                                             ? "Hoạt động"
                                             : "Ẩn"
                                     }}
-                                </p>
+                                </p> -->
                                 <p
                                     style="margin-top: 5px"
                                     (click)="openDiaLogDelete($event, product)"
