--- a/src/app/components/pages/warehouse/stock-in/show/show.component.html
+++ b/src/app/components/pages/warehouse/stock-in/show/show.component.html
@@ -101,7 +101,7 @@
                         </td>
                         <td style="width: 15%; min-width: 10rem">
                             <span class="p-column-title">CreateName</span>
-                            {{ this.userCurrent?.name }}
+                            {{ stockInItem.createName }}
                         </td>
                         <td style="width: 14%; min-width: 10rem">
                             <span class="p-column-title"
