--- a/src/app/components/pages/warehouse/stock-receive/stock-receive.component.html
+++ b/src/app/components/pages/warehouse/stock-receive/stock-receive.component.html
@@ -89,6 +89,8 @@
                                     [showClear]="true"
                                     placeholder="Chọn thời gian"
                                     inputId="icon"
+                                    (onSelect)="onDateSelect($event)"
+                                    (onClear)="onDateClear()"
                                 ></p-calendar>
                             </div>
                             <button
@@ -107,7 +109,7 @@
                         <th style="width: 12%; font-size: 14px;">Người tạo</th>
                         <th style="width: 12%; font-size: 14px;">Từ chi nhánh</th>
                         <th style="width: 12%; font-size: 14px;">Đến chi nhánh</th>
-                        <th style="width: 9%; font-size: 14px;">Trạng thái</th>
+                        <th style="width: 10%; font-size: 14px;">Trạng thái</th>
                         <th style="width: 5%; font-size: 14px;">Số sản phẩm</th>
                         
                       </tr>
@@ -118,7 +120,7 @@
                         <td style="font-size: 14px;"  [routerLink]="['/pages/merchandise/branch-receiving', user.id]">
                           {{user.id}}</td>
                         <td style="font-size: 14px;">{{ user.code }}</td>
-                        <td style="font-size: 14px;">{{ this.userCurrent?.name }}</td>
+                        <td style="font-size: 14px;">{{ user.createName }}</td>
                         <td style="font-size: 14px; max-width: 110px; overflow: hidden;">{{ user.fromBranchName }}</td>
                         <td style="font-size: 14px; max-width: 110px; overflow: hidden;">{{ user.toBranchName }}</td>
                         <td style="text-align: center;">
@@ -146,7 +148,7 @@
                     <div class="paging-info">
                       <div [innerHTML]="currentPageReport"></div>
                     </div>
-                    <p-paginator
+                    <p-paginator 
                             [rows]="this.PageSize"
                             (onPageChange)="onPageChange($event)"
                             [totalRecords]="totalRecords > 0 ? totalRecords : 1"
@@ -162,6 +164,4 @@
             </div>
         </div>
     </section>
-
-
 </main>
