--- a/src/app/components/pages/merchandise/branch-transfer/branch-transfer.component.html
+++ b/src/app/components/pages/merchandise/branch-transfer/branch-transfer.component.html
@@ -134,7 +134,7 @@
                                                         <span
                                                             class="product-inventory"
                                                         >
-                                                            Có thể bán:
+                                                            Có thể chuyển:
                                                             <strong>{{
                                                                 item.mass
                                                             }}</strong>
