--- a/src/app/components/pages/warehouse/stock-in/show/show.component.html
+++ b/src/app/components/pages/warehouse/stock-in/show/show.component.html
@@ -81,12 +81,12 @@
                 </ng-template>
                 <ng-template pTemplate="header">
                     <tr>
-                        <th>Mã nhập kho</th>
-                        <th>Người tạo</th>
-                        <th>Ngày nhập kho</th>
-                        <th>Số sản phẩm</th>
-                        <th>Tổng tiền</th>
-                        <th>Ghi chú</th>
+                        <th style="width: 15%;">Mã nhập kho</th>
+                        <th style="width: 15%;">Người tạo</th>
+                        <th style="width: 5%;">Ngày nhập kho</th>
+                        <th style="width: 5%;">Số sản phẩm</th>
+                        <th style="width: 6%;">Tổng tiền</th>
+                        <th style="width: 40%;">Ghi chú</th>
                     </tr>
                 </ng-template>
                 <ng-template pTemplate="body" let-stockInItem>
